Added Nested Route for customers/add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
               <a routerLink="customers" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Retrieve</a> 
           </li>
           <li class="nav-item">
-              <a routerLink="customer/add" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Create</a>
+              <a routerLink="customers/add" class="btn btn-light btn-sm" role="button" routerLinkActive="active">Create</a>
           </li>
       </ul>
       <hr>
