--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -49,4 +49,5 @@
     	<button type="button" class="btn btn-dark" (click)="goBack()">Back</button>
     	<button type="button" class="btn btn-dark" (click)="newCustomer(); addCustomerForm.reset()">Continue</button>
     </div>
+    <router-outlet></router-outlet>
 </div>
